Add admin authentication and Help Center page
- Add session-based admin authentication with login/logout
- Create admin-login.html with secure login form
- Protect admin routes (reservations API) with auth middleware
- Add Help Center page with contact info and FAQs
- Update navigation with Help Center links
- Add Google Calendar credentials file for integration
- Remove footers and simplify page layouts

--- a/admin.html
+++ b/admin.html
@@ -23,7 +23,10 @@
                         </svg>
                         <span>Cloud Nine</span>
                     </a>
-                    <div class="admin-badge">Admin Dashboard</div>
+                    <div style="display: flex; align-items: center; gap: 16px;">
+                        <div class="admin-badge">Admin Dashboard</div>
+                        <button id="logoutBtn" class="admin-link" style="cursor: pointer; background: none; border: 1px solid var(--border-color); padding: 8px 16px; border-radius: 8px; font-size: 14px; font-weight: 500;">Logout</button>
+                    </div>
                 </div>
             </div>
         </nav>
