--- a/detail.html
+++ b/detail.html
@@ -26,7 +26,8 @@
                         <span>Cloud Nine</span>
                     </a>
                     <div class="nav-links">
-                        <a href="admin.html" class="admin-link">Admin</a>
+                        <a href="help.html" class="nav-link">Help Center</a>
+                        <a href="admin-login.html" class="admin-link">Admin</a>
                         <a href="https://www.airbnb.com/rooms/49599459" target="_blank" class="book-btn-header">Book on Airbnb</a>
                     </div>
                 </div>
@@ -248,11 +249,11 @@
                                 <span>$199</span>
                             </div>
                             <div class="price-line">
-                                <span>Service fee</span>
-                                <span>$<span id="serviceFee">0</span></span>
+                                <span>Tax (13.5%)</span>
+                                <span>$<span id="tax">0</span></span>
                             </div>
                             <div class="price-total">
-                                <span>Total before taxes</span>
+                                <span>Total</span>
                                 <span>$<span id="totalPrice">0</span></span>
                             </div>
                         </div>
@@ -261,37 +262,6 @@
             </div>
         </div>
     </main>
-
-    <!-- Footer -->
-    <footer class="footer">
-        <div class="container">
-            <div class="footer-content">
-                <div class="footer-section">
-                    <h3>About</h3>
-                    <ul>
-                        <li><a href="#">How it works</a></li>
-                        <li><a href="#">Contact us</a></li>
-                    </ul>
-                </div>
-                <div class="footer-section">
-                    <h3>Support</h3>
-                    <ul>
-                        <li><a href="#">Help Center</a></li>
-                        <li><a href="#">Cancellation options</a></li>
-                    </ul>
-                </div>
-                <div class="footer-section">
-                    <h3>Book Now</h3>
-                    <ul>
-                        <li><a href="https://www.airbnb.com/rooms/49599459" target="_blank">View on Airbnb</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="footer-bottom">
-                <p>&copy; 2026 Cloud Nine Beach House. All rights reserved.</p>
-            </div>
-        </div>
-    </footer>
 
     <!-- Reservation Modal -->
     <div class="modal-overlay" id="reservationModal">
