--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
                         </button>
                     </div>
                     <div class="nav-menu">
-                        <a href="admin.html" class="admin-link">Admin</a>
+                        <a href="help.html" class="nav-link">Help Center</a>
+                        <a href="admin-login.html" class="admin-link">Admin</a>
                     </div>
                 </div>
             </div>
@@ -54,41 +55,6 @@
             </div>
         </div>
     </main>
-
-    <!-- Footer -->
-    <footer class="footer">
-        <div class="container">
-            <div class="footer-content">
-                <div class="footer-section">
-                    <h3>About</h3>
-                    <ul>
-                        <li><a href="#">How it works</a></li>
-                        <li><a href="#">Newsroom</a></li>
-                        <li><a href="#">Careers</a></li>
-                    </ul>
-                </div>
-                <div class="footer-section">
-                    <h3>Support</h3>
-                    <ul>
-                        <li><a href="#">Help Center</a></li>
-                        <li><a href="#">Safety information</a></li>
-                        <li><a href="#">Cancellation options</a></li>
-                    </ul>
-                </div>
-                <div class="footer-section">
-                    <h3>Hosting</h3>
-                    <ul>
-                        <li><a href="#">List your property</a></li>
-                        <li><a href="#">Host resources</a></li>
-                        <li><a href="#">Community forum</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="footer-bottom">
-                <p>&copy; 2026 Cloud Nine Beach House. All rights reserved.</p>
-            </div>
-        </div>
-    </footer>
 
     <script src="app.js"></script>
 </body>
